--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -1,6 +1,8 @@
 .container {
   max-width: 800px;
   margin: auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .row {
@@ -46,11 +48,6 @@
   width: 190px;
   height: 55px;
   margin-top: 2cm;
-}
-
-.header {
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 .first-body {
@@ -166,12 +163,10 @@ button {
   height: 50px;
 }
 
-.container-header {
-  margin-left: 100px;
+.header-box {
   height: 130px;
-  justify-content: center;
-  align-items: center;
   padding: 25px;
+  width: 100%;
 }
 
 .header-button {
@@ -179,7 +174,7 @@ button {
   height: 50px;
 }
 
-.pages {
+.column-pages {
   color: #777;
   font-family: Avenir, sans-serif;
   font-style: normal;
