--- a/javascript-modal/styles.css
+++ b/javascript-modal/styles.css
@@ -1,3 +1,7 @@
+.container {
+  display: flex;
+}
+
 body {
   margin: 0;
 }
@@ -9,25 +13,29 @@ body {
   color: white;
   font-size: 8mm;
   border-radius: 8px;
-  border: 2px solid;
   margin: 10px;
-  position: relative;
-  z-index: 1;
+  box-shadow: 1px 1px 1px 1px rgb(102 102 102);
+  border: 1px hidden;
 }
 
 .survey-box {
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
-  height: 100vh;
+  height: 700px;
   justify-content: center;
   align-items: center;
-  top: 0;
   background-color: #323232;
-  position: absolute;
+  box-shadow: 0 0 1000px 1000px rgb(0 0 0 / 80%);
+  padding: 20px 5px;
+  position: fixed;
+  top: 80px;
 }
 
 .survey {
   text-align: center;
+  justify-content: center;
+  align-items: center;
   background-color: white;
   padding: 2rem;
   border-radius: 5px;
@@ -39,10 +47,14 @@ body {
   height: 60px;
   width: 130px;
   font-size: 6mm;
-  border: 2px solid;
   border-radius: 8px;
+  border: 1px hidden;
 }
 
 .hide {
   display: none;
+}
+
+h2 {
+  font-weight: 700;
 }
